tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__YetAnotherBricki-AAAAAAAAAAAAAAAAAAAA7w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 239,
  "prerequisites": [
    251
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A magical one this time. You're on your way to infusion which needs 8 of these. Another 4 will be needed for the alchemical furnace.\n\n§3Yes, you need an MV PLE, deal with it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Yet Another Brick in the Wall...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    251
  ],
  "rewards": [],
  "tasks": []
}
